--- a/composer.json
+++ b/composer.json
@@ -8,16 +8,19 @@
     ],
     "license": "CC0",
     "authors": [
-        {
-            "name": "Derik Ramirez",
+	    {
+            "name": "Derik Ramirez"
+	    },
+	    {
             "name": "Joseph Glass"
-        }
+	    }
     ],
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "rcrowe/twigbridge": "^0.12.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
