--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SNAC_URL=
+SNAC_REST_URL=
+SNAC_INTERFACE_VERSION=development
