Adds React-Bootstrap to the project and updates ConceptForm Component

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 /node_modules
+node_modules
 /public/hot
 public/js/app.js
 /public/storage
 /storage/*.key
 /vendor
+./vendor
 .env
 .env.backup
 .phpunit.result.cache
