--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "^1.2",
         "rcrowe/twigbridge": "^0.12.1"
     },
     "require-dev": {
