Fixes package name on composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "snac-cooperative/snac-laravel",
+    "name": "snac/snac-laravel",
     "type": "project",
     "description": "Laravel framework for SNAC project",
     "keywords": [
