--- a/.env.example
+++ b/.env.example
@@ -45,8 +45,8 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SNAC_URL=http://localhost/~josephglass/snac/www/
-SNAC_REST_URL=http://localhost/~josephglass/snac/www/
+SNAC_URL=
+SNAC_REST_URL=
 SNAC_INTERFACE_VERSION=development
 
 GITHUB_CLIENT_ID=
