--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "require-dev": {
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.9.1",
-        "mockery/mockery": "^1.0",
+        "mockery/mockery": "1.3.3",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^8.0"
     },
