--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.10",
+        "object-path": ">=0.11.5"
     },
     "dependencies": {
-        "bootstrap-vue": "^2.17.0"
+        "bootstrap-vue": "^2.17.0",
+        "object-path": ">=0.11.5"
     }
 }
