Adds the ability to sign in to SNAC from SNAC Laravel using OAuth
This commit includes the changes to Support Single Sign On between the
two apps. Changes had to be done on the SNAC application to support the
login and logout API calls.

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,7 @@ SNAC_INTERFACE_VERSION=development
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_CLIENT_REDIRECT=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_REDIRECT=
