Adds endpoints for login and logout from SNAC

--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 SNAC_URL=
 SNAC_REST_URL=
 SNAC_INTERFACE_VERSION=development
+SNAC_AUTHENTICATION_URL=http://localhost/index.php
 
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
