--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+# MIX_APP_URL is used in Vue components to point to the site URL
+MIX_APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 
