Cache concept_category ids

--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,11 @@ GITHUB_CLIENT_REDIRECT=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CLIENT_REDIRECT=
+
+# CACHED DATABASE IDS
+MIX_ETHNICITY_ID=
+MIX_OCCUPATION_ID=
+MIX_ACTIVITY_ID=
+MIX_SUBJECT_ID=
+MIX_RELIGION_ID=
+MIX_RELATION_ID=
