--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "bootstrap-vue": "^2.17.0",
-        "object-path": ">=0.11.5"
+        "object-path": ">=0.11.5",
+        "vue-multiselect": "^2.1.6"
     }
 }
