--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 /node_modules
-/public/js/app.js
+/public/css/
+/public/js/
 /public/hot
 /public/storage
-/public/css/app.css
-/public/js/app.js
 /storage/*.key
 /vendor
 .env
