--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,3 +19,8 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
+
+<IfModule mod_headers.c>
+  Header set Access-Control-Allow-Origin "snac-dev.iath.virginia.edu"
+  Header set Access-Control-Allow-Origin "snaccooperative.org"
+</IfModule>
