--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     },
     "dependencies": {
         "bootstrap-vue": "^2.17.0",
+        "object-path": ">=0.11.8",
         "vue-multiselect": "^2.1.6"
-        "object-path": ">=0.11.8"
     }
 }
