--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
         "jquery": "^3.2",
         "laravel-mix": "^5.0.5",
         "lodash": "^4.17.21",
+        "object-path": ">=0.11.8",
         "popper.js": "^1.12",
-        "resolve-url-loader": "^2.3.1",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10",
-        "object-path": ">=0.11.8"
+        "vue": "^2.7.8",
+        "vue-template-compiler": "^2.7.8"
     },
     "dependencies": {
         "bootstrap-vue": "^2.17.0",
