--- a/composer.json
+++ b/composer.json
@@ -16,21 +16,21 @@
 	    }
     ],
     "require": {
-        "php": "^7.2.5",
-        "fideloper/proxy": "^4.0",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^6.3",
-        "laravel/framework": "^6.2",
+        "php": "^8.3",
+        "fruitcake/php-cors": "^1.3",
+        "guzzlehttp/guzzle": "^7.8",
+        "laravel/framework": "^11.10",
         "laravel/socialite": "^5.0",
-        "laravel/tinker": "^2.0",
-        "laravel/ui": "^1.2"
+        "laravel/tinker": "^2.9",
+        "laravel/ui": "^4.5",
+        "symfony/var-dumper": "7.1.1"
     },
     "require-dev": {
-        "facade/ignition": "^1.4",
+        "spatie/laravel-ignition": "^2.7",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "1.3.3",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "nunomaduro/collision": "^8.0",
+        "phpunit/phpunit": "^10.0"
     },
     "config": {
         "optimize-autoloader": true,
