--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,12 @@
         "symfony/var-dumper": "7.1.1"
     },
     "require-dev": {
-        "spatie/laravel-ignition": "^2.7",
         "fzaninotto/faker": "^1.9.1",
+        "laravel/envoy": "^2.9",
         "mockery/mockery": "1.3.3",
         "nunomaduro/collision": "^8.0",
-        "phpunit/phpunit": "^10.0"
+        "phpunit/phpunit": "^10.0",
+        "spatie/laravel-ignition": "^2.7"
     },
     "config": {
         "optimize-autoloader": true,
