--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,12 @@ MIX_APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=host.docker.internal
+DB_PORT=54320
+DB_DATABASE=db
+DB_USERNAME=db
+DB_PASSWORD=db
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -26,8 +26,8 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
+MAIL_HOST=localhost
+MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
