--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
     ],
     "require": {
         "php": "^8.3",
+        "deployer/deployer": "^7.4",
+        "deployer/recipes": "^6.2",
         "fruitcake/php-cors": "^1.3",
         "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^11.10",
