--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,9 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://snac-laravel.ddev.site
 # MIX_APP_URL is used in Vue components to point to the site URL
-MIX_APP_URL=http://localhost:8000
+MIX_APP_URL=http://snac-laravel.ddev.site:8000
 
 LOG_CHANNEL=stack
 
