Additional Deployer changes

--- a/.github/workflows/push_workflow.yml
+++ b/.github/workflows/push_workflow.yml
@@ -3,8 +3,7 @@ name: PUSH Workflow
 on:
   push:
     branches:
-      - master
-      - development
+      - jnm/laravel-deploy
 
 jobs:
   app-tests:
