--- a/.github/workflows/pr_workflow.yml
+++ b/.github/workflows/pr_workflow.yml
@@ -3,8 +3,7 @@ name: PR WorkFlow
 on:
   pull_request:
     branches:
-      - master
-      - development
+      - jnm/laravel-deploy
 
 jobs:
   app-tests:
