--- a/.github/workflows/push_workflow.yml
+++ b/.github/workflows/push_workflow.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
       - name: Install Composer Dependencies
-        run: composer install --prefer-dist --no-dev
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
       - name: Generate Key
         run: php artisan key:generate
       - name: Execute tests (Unit and Feature tests) via PHPUnit
@@ -55,7 +55,7 @@ jobs:
           php-version: 8.3
           extension-csv: mbstring, bcmath
       - name: Composer install
-        run: composer install --prefer-dist --no-dev
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
       - name: Setup Deployer
         uses: atymic/deployer-php-action@master
         with:
@@ -83,7 +83,7 @@ jobs:
           php-version: 8.3
           extension-csv: mbstring, bcmath
       - name: Composer install
-        run: composer install --prefer-dist --no-dev
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
       - name: Setup Deployer
         uses: atymic/deployer-php-action@master
         with:
