--- a/.github/workflows/push_workflow.yml
+++ b/.github/workflows/push_workflow.yml
@@ -69,7 +69,7 @@ jobs:
     name: Deploy Project to DEVELOPMENT Server
     runs-on: ubuntu-latest
     needs: app-tests
-    if: github.ref == 'refs/heads/development'
+    if: github.ref == 'refs/heads/jnm/laravel-deploy'
     steps:
       - uses: actions/checkout@v4
       - name: Fetch built assets from Artifacts
