--- a/.github/workflows/push_workflow.yml
+++ b/.github/workflows/push_workflow.yml
@@ -37,6 +37,38 @@ jobs:
         env:
           DB_PORT: 5432
         run: vendor/bin/phpunit
+  build-js-production:
+    name: Build JavaScript/CSS for PRODUCTION Server
+    runs-on: ubuntu-latest
+    needs: app-tests
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - uses: actions/checkout@v4
+      - name: NPM Build
+        run: |
+          npm install
+          npm run prod
+      - name: Put built assets in Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: assets
+          path: public
+  build-js-staging:
+    name: Build JavaScript/CSS for STAGING Server
+    runs-on: ubuntu-latest
+    needs: app-tests
+    if: github.ref == 'refs/heads/jnm/laravel-deploy'
+    steps:
+      - uses: actions/checkout@v4
+      - name: NPM Build
+        run: |
+          npm install
+          npm run dev
+      - name: Put built assets in Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: assets
+          path: public
   deploy-production:
     name: Deploy Project to PRODUCTION Server
     runs-on: ubuntu-latest
