--- a/.github/workflows/push_workflow.yml
+++ b/.github/workflows/push_workflow.yml
@@ -72,7 +72,7 @@ jobs:
   deploy-production:
     name: Deploy Project to PRODUCTION Server
     runs-on: ubuntu-latest
-    needs: app-tests
+    needs: [build-js-production, app-tests]
     if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v4
@@ -100,7 +100,7 @@ jobs:
   deploy-development:
     name: Deploy Project to DEVELOPMENT Server
     runs-on: ubuntu-latest
-    needs: app-tests
+    needs: [build-js-staging, app-tests]
     if: github.ref == 'refs/heads/jnm/laravel-deploy'
     steps:
       - uses: actions/checkout@v4
