--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "lodash": "^4.17.21",
         "object-path": ">=0.11.8",
         "popper.js": "^1.12",
+        "prettier": "^3.3.3",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
