--- a/.github/workflows/push_workflow.yml
+++ b/.github/workflows/push_workflow.yml
@@ -85,7 +85,7 @@ jobs:
         uses: shivammathur/setup-php@master
         with:
           php-version: 8.3
-          extension: mbstring, bcmath, csv
+          extensions: mbstring, bcmath, csv
       - name: Composer install
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
       - name: Setup Deployer
@@ -113,7 +113,7 @@ jobs:
         uses: shivammathur/setup-php@master
         with:
           php-version: 8.3
-          extension: mbstring, bcmath, csv
+          extensions: mbstring, bcmath, csv
       - name: Composer install
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
       - name: Deploy to Dev
