Skip SSH setup when deploying

--- a/.github/workflows/push_workflow.yml
+++ b/.github/workflows/push_workflow.yml
@@ -117,4 +117,5 @@ jobs:
           dep: deploy stage=development
           private-key: ${{ secrets.SSH_PRIVATE_KEY }}
           known-hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
+          skip-ssh-setup: true
           verbosity: -vvv
