Update target branches; update test workflow; rename workflow files

--- a/.github/workflows/deploy_workflow.yml
+++ b/.github/workflows/deploy_workflow.yml
@@ -1,9 +1,10 @@
-name: PUSH Workflow
+name: Deploy Workflow
 
 on:
   push:
     branches:
-      - jnm/laravel-deploy
+      - development
+      - master
 
 jobs:
   app-tests:
