--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -1,9 +1,10 @@
-name: PR WorkFlow
+name: Test WorkFlow
 
 on:
-  pull_request:
-    branches:
-      - jnm/laravel-deploy
+  push:
+    branches-ignore:
+      - development
+      - master
 
 jobs:
   app-tests:
@@ -22,13 +23,18 @@ jobs:
           - 5432:5432
     steps:
       - uses: actions/checkout@v4
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.3
+          extensions: mbstring, bcmath, csv
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
       - name: Install Composer Dependencies
-        run: composer install --prefer-dist --no-dev
-      - name: Generate key
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
+      - name: Generate Key
         run: php artisan key:generate
-      - name: Execute tests (Unit and Feature tests) using PHPUnit
+      - name: Execute tests (Unit and Feature tests) via PHPUnit
         env:
           DB_PORT: 5432
-        run: ./vendor/bin/phpunit
+        run: vendor/bin/phpunit
