Fix deploy workflow branch settings

--- a/.github/workflows/deploy_workflow.yml
+++ b/.github/workflows/deploy_workflow.yml
@@ -58,7 +58,7 @@ jobs:
     name: Build JavaScript/CSS for STAGING Server
     runs-on: ubuntu-latest
     needs: app-tests
-    if: github.ref == 'refs/heads/jnm/laravel-deploy'
+    if: github.ref == 'refs/heads/development'
     steps:
       - uses: actions/checkout@v4
       - name: NPM Build
