--- a/.github/workflows/deploy_workflow.yml
+++ b/.github/workflows/deploy_workflow.yml
@@ -38,52 +38,19 @@ jobs:
         env:
           DB_PORT: 5432
         run: vendor/bin/phpunit
-  build-js-production:
-    name: Build JavaScript/CSS for PRODUCTION Server
-    runs-on: ubuntu-latest
+  deploy-production:
+    name: Deploy Project to PRODUCTION Server
+    runs-on: self-hosted
     needs: app-tests
     if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v4
-      - name: NPM Build
-        run: |
-          npm install
-          npm run prod
-      - name: Put built assets in Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: assets
-          path: public
-  build-js-staging:
-    name: Build JavaScript/CSS for STAGING Server
-    runs-on: ubuntu-latest
-    needs: app-tests
-    if: github.ref == 'refs/heads/development'
-    steps:
-      - uses: actions/checkout@v4
+      - name: Composer install
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
       - name: NPM Build
         run: |
           npm install
           npm run dev
-      - name: Put built assets in Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: assets
-          path: public
-  deploy-production:
-    name: Deploy Project to PRODUCTION Server
-    runs-on: self-hosted
-    needs: [build-js-production, app-tests]
-    if: github.ref == 'refs/heads/master'
-    steps:
-      - uses: actions/checkout@v4
-      - name: Fetch built assets from Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: assets
-          path: public
-      - name: Composer install
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
       - name: Deploy to Prod
         uses: deployphp/action@v1
         with:
@@ -94,17 +61,16 @@ jobs:
   deploy-development:
     name: Deploy Project to DEVELOPMENT Server
     runs-on: self-hosted
-    needs: [build-js-staging, app-tests]
-    if: github.ref == 'refs/heads/development'
+    needs: app-tests
+    if: github.ref == 'refs/heads/jnm/laravel-deploy'
     steps:
       - uses: actions/checkout@v4
-      - name: Fetch built assets from Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: assets
-          path: public
       - name: Composer install
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
+      - name: NPM Build
+        run: |
+          npm install
+          npm run dev
       - name: Deploy to Dev
         uses: deployphp/action@v1
         with:
