--- a/.github/workflows/deploy_workflow.yml
+++ b/.github/workflows/deploy_workflow.yml
@@ -49,6 +49,9 @@ jobs:
       - name: Composer install
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
       - name: NPM Build
+        uses: actions/setup-node@v3
+        with:
+          node-version: 10.24.1
         run: |
           npm install
           npm run dev
@@ -69,6 +72,9 @@ jobs:
       - name: Composer install
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
       - name: NPM Build
+        uses: actions/setup-node@v3
+        with:
+          node-version: 10.24.1
         run: |
           npm install
           npm run dev
