--- a/.github/workflows/deploy_workflow.yml
+++ b/.github/workflows/deploy_workflow.yml
@@ -48,10 +48,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: Composer install
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
-      - name: NPM Build
+      - name: NPM Install
         uses: actions/setup-node@v3
         with:
           node-version: 10.24.1
+      - name: NPM Setup
         run: |
           npm install
           npm run dev
@@ -71,10 +72,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: Composer install
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
-      - name: NPM Build
+      - name: NPM Install
         uses: actions/setup-node@v3
         with:
           node-version: 10.24.1
+      - name: NPM Setup
         run: |
           npm install
           npm run dev
