Set the ENV_FILE variable for the deploy setup; store the proper stage's ENV file

--- a/.github/workflows/deploy_workflow.yml
+++ b/.github/workflows/deploy_workflow.yml
@@ -51,6 +51,10 @@ jobs:
         uses: deployphp/action@v1
         with:
           dep: deploy stage=production
+          options:
+            keep_releases: 10
+          env:
+            ENV_FILE: ${{ secrets.ENV_PROD }}
           private-key: ${{ secrets.SSH_PRIVATE_KEY_PROD }}
           skip-ssh-setup: true
           verbosity: -vvv
@@ -67,6 +71,10 @@ jobs:
         uses: deployphp/action@v1
         with:
           dep: deploy stage=development
+          options:
+            keep_releases: 10
+          env:
+            ENV_FILE: ${{ secrets.ENV_DEV }}
           private-key: ${{ secrets.SSH_PRIVATE_KEY_DEV }}
           skip-ssh-setup: true
           verbosity: -vvv
