--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "fruitcake/php-cors": "^1.3",
         "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^11.10",
+        "laravel/sanctum": "^4.0",
         "laravel/socialite": "^5.0",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
